prevent image squishing on resize

--- a/css/compatibility.css
+++ b/css/compatibility.css
@@ -41,7 +41,8 @@ input {
 }
 
 .compatiblityimg {
-  width: 30%;
+  max-width: 60%;
+  max-height: 20vh;
   min-width: 100px;
   display: block;
   margin: 0 auto;
